# geolm

./: .gitignore  LICENSE  README.md  data-to-3d-model-input.py  llama_api_text_image_pdf.ipynb  llm_doc_to_dsl.py  pyproject.toml  run-1-text-image-extraction.py  run-2-text-consolidation.py  run-3-dsl-generation.py  run.py  streamlit_app.py
extracted-data/: README.md
hutton_lm/: cli.py  data_loader.py  llm_interface.py  model_builder.py  pdf_parser.py
input-data/: default_geological_description.txt  example_geological_description.txt
input-data/default/: default_structure.csv
input-data/llm-generated/: orientations_20250503_154211.csv  orientations_20250503_154537.csv  orientations_20250503_154701.csv  orientations_20250503_154826.csv  orientations_20250503_154938.csv  orientations_20250503_160117.csv  orientations_20250503_160230.csv  orientations_20250503_161645.csv  orientations_20250503_182214.csv  orientations_20250503_183216.csv  orientations_20250503_185908.csv  orientations_20250503_190309.csv  orientations_20250503_191023.csv  orientations_20250503_191114.csv  orientations_20250503_191134.csv  orientations_20250503_193734.csv  orientations_20250503_194611.csv  orientations_20250503_195027.csv  orientations_20250503_195146.csv  orientations_20250503_195309.csv  orientations_20250503_195339.csv  orientations_20250503_195817.csv  orientations_20250503_195843.csv  orientations_20250503_195910.csv  orientations_20250503_195936.csv  orientations_20250503_195958.csv  orientations_20250503_200018.csv  orientations_20250503_200042.csv  (+255 more)
(+3 files in other folders)
