[tool.poetry]
name = "hutton-lm"
version = "0.1.0"
description = ""
authors = ["William Davis <williamjsdavis@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gempy = "^2024.2.0.2"
plotly = "^6.0.1"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
gempy-viewer = "^2025.1.1"
pyvista = "^0.45.0"
numpy = "^2.2.5"
pandas = "^2.2.3"
scipy = "^1.15.2"
torch = "^2.7.0"
llama-api-client = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
